...
      'uz': '',
    },
  },
  // Login
  {
    '5c0uhmth': {
      'ru': 'Добро пожаловать',
      'kk': '',
      'uz': '',
    },
    'm69w17go': {
      'ru': 'Войдите в аккаунт',
      'kk': '',
      'uz': '',
    },
    'b91momt2': {
      'ru': 'Номер телефона',
      'kk': '',
      'uz': '',
    },
    'dbx6n1gd': {
      'ru': 'Пароль',
      'kk': '',
      'uz': '',
    },
    'rvgqhe8k': {
      'ru': 'Войти',
      'kk': '',
      'uz': '',
    },
    'h91bvvf3': {
      'ru': 'Нету аккаунта? ',
      'kk': '',
...
    'atishnqh': {
      'ru': 'Добро пожаловать',
      'kk': '',
      'uz': '',
    },
    'kiwqvnc9': {
      'ru': 'Создайте аккаунт',
      'kk': '',
      'uz': '',
    },
    '1vlgmsq3': {
      'ru': 'Выберите роль',
      'kk': '',
...
