...
      builder: (alertDialogContext) {
        return AlertDialog(
          content: Text(text),
          actions: [
            TextButton(
              onPressed: () => Navigator.pop(alertDialogContext),
              child: const Text('Ok'),
            ),
          ],
        );
      },
    );
  }
...
      repeatPassword.dispose();
    }
  }

  Future<void> _handleLogin() async {
    if (_model.emailAddressTextController.text == '') {
      await _showTextDialog('Введите номер телефона');
    } else if (_model.passwordTextController.text == '') {
      await _showTextDialog('Введите пароль');
    } else {
      _model.token = await TokenCall.call(
        phone: _model.emailAddressTextController.text,
        password: _model.passwordTextController.text,
        mode: 'login',
      );
...
